# inspireface4j

./: .gitignore  LICENSE.txt  README.md  pom.xml  test_res
.github/md/: README.md
jinspirelib/: CMakeLists.txt  build.sh  test.sh  test_res
jinspirelib/src/: box_sample.cpp  jinspireface.cpp  jinspireface.hpp  landmark_sample.cpp  landmark_sample.cpp.off  off
src/main/java/io/metaloom/inspireface4j/: BoundingBox.java  Detection.java  FaceAttributes.java  FaceLandmark.java  Inspireface4jException.java  InspirefaceLib.java  InspirefaceSession.java  SessionFeature.java
src/main/java/io/metaloom/inspireface4j/data/: AgeBracket.java  FaceDetections.java  Gender.java  HFFaceAttributeResult.java  HFFaceEulerAngle.java  HFFaceFeature.java  HFLogLevel.java  HFMultipleFaceData.java  HFaceRect.java  PHFFaceBasicToken.java  Race.java
src/main/java/io/metaloom/inspireface4j/data/internal/: HFFaceAttributeResult.java  HFFaceEulerAngle.java  HFFaceFeature.java  HFLandmarkData.java  HFLogLevel.java  HFMultipleFaceData.java  HFaceRect.java  PHFFaceBasicToken.java
src/main/java/io/metaloom/inspireface4j/layout/: BoundingBoxMemoryLayout.java  DetectionArrayMemoryLayout.java  DetectionMemoryLayout.java  HFMultipleFaceDataLayout.java
src/test/java/io/metaloom/inspireface4j/: AbstractInspireFaceLibTest.java  InpirefaceLibImageTest.java  InpirefaceLibTest.java  InpirefaceLibVideoTest.java  TestMedia.java
src/test/java/io/metaloom/inspireface4j/example/: UsageExampleTest.java
src/test/resources/: sources.txt
